# bm2-battery-monitor

./: LICENSE.txt  README.md  pyproject.toml
.docs/: reverse_engineering.md
apps/: bm2_history.py  bm2_mqtt.py  bm2_viewer.py  requirements.txt
bm2_esphome/: bm2.yaml  include.h  main.yaml  secrets.yaml.template
bm2_mqtt/: bm2_mqtt.py  requirements.txt
bm2_python/: check_mypy.sh  mypy.ini  requirements.txt
bm2_python/src/bm2/: bit_utils.py  client.py  encryption.py
